# grafana_dashboard_templater

./: .coveragerc  404.html  README.md  index.html  pydoc-markdown.yml  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish-to-pypi.yml  pull-request-checks-test.yml  pull-request-checks.yml  test.yml  test2.yml
dashboard-templates/database/mariadb/v10/: dashboard.json.sample
dashboard-templates/database/postgresql/v13/: dashboard.json.sample
dashboard-templates/database/redis/v7/: dashboard.json.sample
docs/: mkdocs.yml
docs/content/grafana_dashboard_templater/: dashboard.md  model.md
docs/site/: 404.html  index.html  search.html  sitemap.xml
docs/site/grafana_dashboard_templater/dashboard/: index.html
docs/site/grafana_dashboard_templater/model/: index.html
docs/site/search/: search_index.json
grafana_dashboard/: dashboard.py  model.py
grafana_dashboard_templater/dashboard/: index.html
grafana_dashboard_templater/model/: index.html
search/: search_index.json
src/grafana_dashboard/: dashboard.py  model.py
test/: test_dashboard.py  test_model.py
tests/: test_dashboard.py  test_model.py
